--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-/*
-	Partly taken from http://bettermotherfuckingwebsite.com/
-*/
+/* Partly taken from http://bettermotherfuckingwebsite.com/ */
 
 body {
 	margin: 40px auto;
