--- a/styles/usage.css
+++ b/styles/usage.css
@@ -1,18 +1,9 @@
-button {
-height: 6cm; width: 100%;
-font-size: 46px; letter-spacing: 6px;
-}
-
-#input_button {
-position: relative; top: 100px; right: 350px;
-font-size: 46px;
-}
-
-#output_button {
-position: relative; bottom: 130px; left: 380px;
-font-size: 46px;
-}
-
-#back_button {
-font-size: 70px;
+.btn-xlg {
+    padding: 18px 28px;
+    margin: 20px;
+    font-size: 48px; //change this to your desired size
+    line-height: normal;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px;
 }
